crates/swc_css_parser/tests/errors/hash/output.stderr
error: Expected Declaration value
 --> $DIR/tests/errors/hash/input.css:2:11
  |
2 |     prop: #
  |           ^

error: Unexpected end of file

